# meetO

./: .gitignore
PersonaMeet_AgentPipeline/: .env.example  main.py  persona_meet_bot.py  presenter_agent.py  pyproject.toml  requirements.txt  server.py  upload_sessions.py
PersonaMeet_AgentPipeline/meeting_pipeline/: analyzer.py  db.py  models.py  pipeline.py  reporting.py
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  page.tsx
client/app/dashboard/: layout.tsx  page.tsx
client/app/dashboard/ai-apps/: page.tsx
client/app/dashboard/meeting/[id]/: page.tsx
client/app/dashboard/notetaker/: page.tsx
client/app/dashboard/presenter/: page.tsx
client/components/dashboard/: app-sidebar.tsx  meeting-dashboard-view.tsx  rich-markdown.tsx
client/components/landing/: FAQ.tsx  Footer.tsx  Header.tsx  Hero.tsx  StickyFeatures.tsx  Testimonials.tsx
client/components/presenter/: voice-widget.tsx
livekit-voice-agent/: .gitignore  agent.py  presenter_agent.py  pyproject.toml
