[project]
name = "personameet-agentpipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "google-generativeai>=0.8.0",
    "openai>=1.66.0",
    "playwright>=1.51.0",
    "requests>=2.31.0",
    "sarvamai>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pymongo>=4.6.3",
    "python-dotenv>=1.0.1",
    "motor>=3.4.0"
]
